--- a/Project/feature-u-soundboard/src/features/tts/components/TextToSpeechForm.module.css
+++ b/Project/feature-u-soundboard/src/features/tts/components/TextToSpeechForm.module.css
@@ -7,10 +7,9 @@
 .buttonContainer {
   display: flex;
   flex-direction: row;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .buttonContainer button {
   flex: 1;
-  margin: 0 5px;
 }
